--- a/docs/第二章 推荐系统实战/2.2新闻推荐系统实战/docs/2.2.2.2 flask简介及基础.md
+++ b/docs/第二章 推荐系统实战/2.2新闻推荐系统实战/docs/2.2.2.2 flask简介及基础.md
@@ -36,6 +36,8 @@ virtualenv venv
 
 ```bash
 source venv/bin/activate
+或者
+. venv/bin/activate
 ```
 
 接下来就可以在这个环境中安装 Flask，当然如果你也可以选择使用下述指令直接在全局环境中安装Flask。
